--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
     <div class="gallery">
       
     </div>
-    <button id="scrollUpButton" title="Scroll Up"></button>
+    <div id="scrollUpButton">
+      <button onclick="scrollToTop()">Scroll Up</button>
     <button type="button" class="load-more">Load more</button>
     <script type="module" src="./index.js"></script>
   </body>
